<resources>
    <string name="app_name">Dost</string>
    <string name="facebook_app_id">227726657960269</string>
    <string name="fb_login_protocol_scheme">fb227726657960269</string>
    <string name="title_activity_booking">Map</string>
    <string name="google_direction_api">AIzaSyAZi21CpeikwEMCK9rV0dUjSfAZLZgc3p4</string>
    <string name="linktodostapp">Looking to Order through DOST App...</string>
    <string name="sign_in">Sign In</string>
    <string name="register">REGISTER</string>
    <string name="dost">D O S T</string>
    <string name="service_provider">Service Provider</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="phone">Phone#</string>
    <string name="profession">Profession</string>
    <string name="title_activity_driver_tracking">Map</string>
    <string name="ofline">Ofline</string>
    <string name="online">Online</string>
    <string name="my_status">My status</string>
    <string name="continure">Continue</string>
    <string name="enter_number">Enter your number</string>
</resources>
