<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register_bg"
    android:padding="20dp"
    tools:context=".RegisterationActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dost"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="36sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/service_provider"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="25sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/txtview_app_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/linktodostapp"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_above="@+id/signinButtons"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"

            >

            <com.rilixtech.CountryCodePicker
                android:id="@+id/ccp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:ccp_dialogTextColor="@android:color/white"
                app:ccp_textColor="@android:color/white"
                />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/phone_number_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:hint="@string/enter_number"
                android:inputType="phone"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signinButtons"
        android:layout_above="@+id/fb_google"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btn_signin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sign_in"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/register"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fb_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtview_app_reg"
        android:orientation="vertical"
        android:weightSum="2">

        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_fb_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:visibility="gone"
            />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/login_google_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:visibility="gone"/>

    </LinearLayout>

</RelativeLayout>