<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardMaxElevation="10dp"
    android:background="@drawable/register_gradient">
    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:id="@+id/logo_reg"
        android:layout_centerHorizontal="true"
        android:src="@drawable/dost_logo"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical"
        tools:ignore="UselessParent"
        android:layout_below="@+id/logo_reg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="1">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="0.25"
                android:background="@android:color/background_dark" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/register"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="0.25"
                android:background="@android:color/background_dark" />

        </LinearLayout>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:text=""
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textSize="23sp"
            app:met_baseColor="@color/colorPrimary"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@android:color/black"
            app:met_singleLineEllipsis="true"
            app:met_textColorHint="@android:color/black" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:text=""
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textSize="23sp"
            app:met_baseColor="@android:color/black"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@android:color/black"
            app:met_singleLineEllipsis="true"
            app:met_textColorHint="@android:color/black" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:text=""
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textSize="23sp"
            app:met_baseColor="@android:color/black"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@android:color/black"
            app:met_singleLineEllipsis="true"
            app:met_textColorHint="@android:color/black" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:inputType="textEmailAddress"
            android:text=""
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textSize="23sp"
            app:met_baseColor="@android:color/black"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@android:color/black"
            app:met_singleLineEllipsis="true"
            app:met_textColorHint="@android:color/black" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/etProfession"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/profession"
            android:inputType="textEmailAddress"
            android:text=""
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textSize="23sp"
            app:met_baseColor="@android:color/black"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@android:color/black"
            app:met_singleLineEllipsis="true"
            app:met_textColorHint="@android:color/black" />

        <Button
            android:id="@+id/dialog_register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            android:text="@string/register"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>